@@ -1,0 +1,1 @@
+TestGem::TEST_PLUGIN_LOAD = :loaded
