@@ -4,6 +4,8 @@
 
 	* lib/rubygems/command_manager.rb: Now catches errors caused by command
 	  loading. (Protect against broken plugins)
+	* lib/rubygems.rb: Introduce and use Gem.load_plugins, RubyGems now protects
+	  against exceptions being raised by plugins.
 
 2010-03-25  Eric Hodel  <drbrain@segment7.net>
 
